--- a/OpenCore-091-debug/EFI/OC/config.plist
+++ b/OpenCore-091-debug/EFI/OC/config.plist
@@ -281,7 +281,7 @@
 			<dict>
 				<key>device-id</key>
 				<data>
-				8hUAAA==
+				AAAAAA==
 				</data>
 			</dict>
 			<key>PciRoot(0x0)/Pci(0x1F,0x3)</key>
